--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -4,7 +4,7 @@ title: "Talks and presentations"
 permalink: /talks/
 author_profile: true
 ---
- <p>During my PhD study, I have been able to give more than 15 talks in different conferences, workshops and seminars. Here I list a selection of 5 most recent ones.</p> 
+ <p>During my PhD study, I have been able to give more than 15 talks in different conferences, workshops and seminars. Here I list a selection of some most recent ones.</p> 
 {% if site.talkmap_link == true %}
 
 <p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
