--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,7 +4,7 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
- <p>During my graduate training, I was fortunate enough to be able to supervise both master’s and bachelor’s students on their theses, as well as design and oversee lab courses for students in their degree programs.</p> 
+ <p>During my graduate training, I was fortunate enough to be able to supervise both master’s and bachelor’s students on their theses, tutor lecture on cosmology for master students, as well as design and oversee lab courses for students in their degree programs.</p> 
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
